# Elektronik

./: .gitattributes  .gitignore  AddressableBuildScript.cs  Assembly-CSharp-Editor-firstpass.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  Contribution.md  Elektronik tools 2.0.sln  LICENSE.md  README (ru-RU).md  README.md  ReleaseNotes.md  ReleaseNotes3.2.md  UniRx.Async.Editor.csproj  UniRx.Async.csproj  UniRx.csproj  build.bat  extrinsics.yml  intrinsics.yml  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  build.bat  build_natives.bat  build_natives.sh  build_plugins.bat  build_plugins.sh  build_unity.bat  build_unity.sh  copy_all_plugin_data.bat  copy_all_plugin_data.sh  copy_plugin_data.bat  copy_plugin_data.sh  make_packages.ps1  make_packages.sh  run_unity_tests.bat  run_unity_tests.sh  update_version.ps1  update_version.sh
.github/workflows/: activation.yml  build.yaml  build.yml  build_linux.yml  main.yml  plugins tests.yaml  pre-release.yaml  release.yaml  release.yml  release.yml.txt  run_tests.yaml
Assets/: CameraChanger.cs  PlaneTester.cs  packages.config
Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
Assets/Editor/: PlayerBuildScript.cs
Assets/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  HDRenderPipelineAsset.asset
Assets/Input/: CameraControls.cs  CameraControls.inputactions  MouseDragComposite.cs
Assets/Localization/: Localization Settings.asset  Russian (ru).asset  UI Text Shared Data.asset  UI Text.asset  UI Text_en.asset  UI Text_ru.asset
Assets/Materials/: 3DButtonMaterial.mat  ConvexMaterial.mat  Edge Detection Material.mat  EdgeDetectionShader.shader  Elektronik LiberationSans SDF.asset  LineCloudShader.shader  Observation.mat  Plane Material.mat  Plane Shader.shader  PointCloud.vfx  PointCloudShader.shader  Points material.mat  Points shader.shader  Sphere.mat  TransparentSphere.mat  WieframeMaterial.mat
Assets/Prefabs/: ConvexHull.prefab  Grid label.prefab  Line.prefab  Observation.prefab  ObservationMessage.prefab  Renderers.prefab  SceneMessage.prefab  Sphere marker.prefab  Tracked Object.prefab  Transparent sphere marker.prefab  UI Path field.prefab  UI Plugin Item.prefab  UI String field.prefab
Assets/Scenes/: AndroidLoading.unity  Empty.unity  Main menu.unity  Main.unity  Settings.unity  Test scene.unity  Welcome.unity
Assets/Scripts/: BuildScript.cs  CmdArgsChecker.cs  CommandLineStarter.cs  Elektronik.Scripts.asmdef  IChainable.cs  ISourceRenderer.cs  LogsEnabler.cs  MainThreadInvoker.cs  PrefabsStore.cs  ThreadWorker.cs  Updater.Version.cs  Updater.cs  VersionAutoIncrementer.cs  VrController.cs
Assets/Shaders/: ComputeShaders.cginc  CrystalCloudShader.shader  Cube.cginc  CubeCloudShader.shader  LineCloudShader.shader  Markers.cginc  MeshShader.shader  MeshShaderLit.shader  MeshShaderTransparent.shader  MeshShaderUnlit.shader  ObservationCloudShader.shader  PlaneCloudShader.shader  PointCloudShader.shader  Sphere.shader  TMP_SDF.shader  TransparentCubeCloudShader.shader  TransparentSphere.shader  Wireframe.cginc  WireframeShader.shader
Assets/SteamVR/: SteamVR.asmdef
Assets/SteamVR_Input/: SteamVR_Actions.asmdef
Assets/XR/: XRGeneralSettings.asset
Assets/loadingBar/: loading2.prefab
Examples/csharp/: .gitignore  csharp.sln
Examples/cxx/: .gitignore  CMakeLists.txt
Examples/cxx/Tests/: CMakeLists.txt
Examples/cxx/Tests/source/: ObservationsTests.cpp  ObservationsTests.h  OfflineTests.cpp  OfflineTests.h  PointsTests.cpp  PointsTests.h  TestsBase.h  main.cpp
Logs/: log_02_28_2019 12_57_34.txt
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  EnableVR.patch  GraphicsSettings.asset  InputManager.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset  ScriptableBuildPipeline.json  TagManager.asset
Temp/: UnityTempFile-04c67f574a2aefb4ea71937d6742bad9  UnityTempFile-0e423eb3cb0cd4f4a821893661906521  UnityTempFile-185660e66e1265541ae3f4911935680b  UnityTempFile-1aa30ced5d4979d4d95a733d5417eb02  UnityTempFile-1f632f2a51d6a954fab970def58bed1a  UnityTempFile-3c3b1475d116c2f4d9a0e5cab35d5260  UnityTempFile-4938c3b94f1bb0241b68ff4e1510ee3f  UnityTempFile-6e2b9deaf6fb3614989a6aba7b4a30d0  UnityTempFile-767275bb1549616489faeb9f5a4516ba  UnityTempFile-8d0a69e106db1ed46abe6e56809170de  UnityTempFile-99d3fe822c4afde439340e91da00225e  UnityTempFile-be1b058b6e650174f867e63eedfbc32f  UnityTempFile-e787a35062823a446859c725a634a7ed  UnityTempFile-f204a14c48f3a7a428a7703a1107edd9  UnityTempFile-f4a33b52e92177b4eb03c8449e22bdf0
Temp/__Backupscenes/: 0.backup
docs/: !StartHere.md  .StartHere.md  API-EN.md  API-RU.md  Build-EN.md  Build-RU.md  Data-EN.md  Data-RU.md  Home-EN.md  Home-RU.md  Plugins-EN.md  Plugins-RU.md  Protobuf-EN.md  Protobuf-RU.md  ROS-EN.md  ROS-RU.md  Usage-EN.md  Usage-RU.md  Windows-EN.md  Windows-RU.md  WritePlugin-EN.md  WritePlugin-RU.md  test.md  usage.md  использование.md
package/DEBIAN/: control  postinst  postrm
plugins/: plugins.sln  vcpkg.json
plugins/Clustering.KMeans/: Clustering.KMeans.csproj  KMeansClusteringFactory.cs  (+2 more)
plugins/MeshBuilder/: Builder.i  CMakeLists.txt  MeshBuilder.cpp  MeshBuilder.h
plugins/NativeMath/: CMakeLists.txt  Math.i  MeshBuilder.cpp  MeshBuilder.h  NativeStructs.h  PlanesDetector.cpp  PlanesDetector.h
plugins/NativeMath/PlaneDetection/: Octree.cpp  Octree.h  Plane.cpp  Plane.h  Point.h  PointCloud.cpp  PointCloud.h  Vector3.h
plugins/PlanesDetector/: CMakeLists.txt
plugins/PlanesDetector/include/: Detector.i  Octree.h  Plane.h  PlanesDetector.h  Point.h  PointCloud.h  RGB.h  Ransac.h  UnionFind.h  Vector3.h
plugins/PlanesDetector/src/: Octree.cpp  Plane.cpp  PlanesDetector.cpp  PointCloud.cpp  Ransac.cpp  main.cpp
plugins/ROS2DDS/: CMakeLists.txt  CMakeSettings.json  CopyDlls.cmake  vcpkg.json
plugins/ROS2DDS/DataTypes/: Ros.cxx  Ros.h  Ros.idl  RosPubSubTypes.cxx  RosPubSubTypes.h
plugins/ROS2DDS/interface/: Connector.cpp  Connector.h  Connector.i  Handlers.h  Logger.h  Messages.h
(+1936 files in other folders)
